select기능 구현 완료[08/02 박지영]

--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -88,26 +88,26 @@
 						</li>
 
 						<li class="account">
-							<a href="/shop/shopMain">
+							<a href="/shop/shopMain/1">
 								쇼핑하기
 								<i class="fa fa-angle-down"></i>
 							</a>
 							<ul class="account_selection">
-								<li><a href="/shop/shopMain"><i class="fa fa-sign-in" aria-hidden="true"></i>전체
+								<li><a href="/shop/shopMain/1"><i class="fa fa-sign-in" aria-hidden="true"></i>전체
 										상품</a></li>
-								<li><a href="/shop/shopMain?categoryNo=2"><i class="fa fa-sign-in"
+								<li><a href="/shop/shopMain/2"><i class="fa fa-sign-in"
 											aria-hidden="true"></i>식품</a>
 								</li>
-								<li><a href="/shop/shopMain?categoryNo=3"><i class="fa fa-sign-in"
+								<li><a href="/shop/shopMain/3"><i class="fa fa-sign-in"
 											aria-hidden="true"></i>리빙
 										용품</a></li>
-								<li><a href="/shop/shopMain?categoryNo=4"><i class="fa fa-sign-in"
+								<li><a href="/shop/shopMain/4"><i class="fa fa-sign-in"
 											aria-hidden="true"></i>주방
 										용품</a></li>
-								<li><a href="/shop/shopMain?categoryNo=5"><i class="fa fa-sign-in"
+								<li><a href="/shop/shopMain/5"><i class="fa fa-sign-in"
 											aria-hidden="true"></i>욕실
 										용품</a></li>
-								<li><a href="/shop/shopMain?categoryNo=6"><i class="fa fa-sign-in"
+								<li><a href="/shop/shopMain/6"><i class="fa fa-sign-in"
 											aria-hidden="true"></i>선물
 										키트</a></li>
 
@@ -249,23 +249,23 @@
 
 	<!-- End Top Search -->
 	<!-- ALL JS FILES -->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/popper.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<script src="/js/jquery-3.2.1.min.js"></script>
+	<script src="/js/popper.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
 	<!-- ALL PLUGINS -->
-	<script src="js/jquery.superslides.min.js"></script>
-	<script src="js/bootstrap-select.js"></script>
-	<script src="js/inewsticker.js"></script>
-	<script src="js/bootsnav.js."></script>
-	<script src="js/images-loded.min.js"></script>
-	<script src="js/isotope.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/baguetteBox.min.js"></script>
-	<script src="js/jquery-ui.js"></script>
-	<script src="js/jquery.nicescroll.min.js"></script>
-	<script src="js/form-validator.min.js"></script>
-	<script src="js/contact-form-script.js"></script>
-	<script src="js/custom.js"></script>
+	<script src="/js/jquery.superslides.min.js"></script>
+	<script src="/js/bootstrap-select.js"></script>
+	<script src="/js/inewsticker.js"></script>
+	<script src="/js/bootsnav.js."></script>
+	<script src="/js/images-loded.min.js"></script>
+	<script src="/js/isotope.min.js"></script>
+	<script src="/js/owl.carousel.min.js"></script>
+	<script src="/js/baguetteBox.min.js"></script>
+	<script src="/js/jquery-ui.js"></script>
+	<script src="/js/jquery.nicescroll.min.js"></script>
+	<script src="/js/form-validator.min.js"></script>
+	<script src="/js/contact-form-script.js"></script>
+	<script src="/js/custom.js"></script>
 	<script>
 		document.getElementById('myPageLink').addEventListener('click', function () {
 			var offcanvasElement = document.getElementById('sidebar');
