--- a/src/main/resources/templates/shop/detail.html
+++ b/src/main/resources/templates/shop/detail.html
@@ -96,15 +96,15 @@
 					data-bs-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item">
-							<img th:src="@{/css/shop/images/}+${g.mainFname}" width="600" height="490" preserveAspectRatio="xMidYMid slice" focusable="false" />
+							<img th:src="@{/images/shop/}+${g.mainFname}" width="600" height="490" preserveAspectRatio="xMidYMid slice" focusable="false" />
 							<rect width="100%" height="100%" fill="#555"></rect>
 						</div>
 						<div class="carousel-item active">
-							<img  th:src="@{/css/shop/images/}+${g.addFname}" width="600" height="490" preserveAspectRatio="xMidYMid slice" focusable="false" />
+							<img  th:src="@{/images/shop/}+${g.addFname}" width="600" height="490" preserveAspectRatio="xMidYMid slice" focusable="false" />
 							<rect width="100%" height="100%" fill="#555"></rect>
 						</div>
 						<div class="carousel-item">
-							<img width="600" height="490" src="/css/shop/images/potatochip1_3.jpg"
+							<img width="600" height="490" src="/images/shop/potatochip1_3.jpg"
 								preserveAspectRatio="xMidYMid slice" focusable="false" />
 							<rect width="100%" height="100%" fill="#555"></rect>
 						</div>
@@ -197,7 +197,7 @@
 				<!--==============상세정보 div start=================-->
 				<div class="info">
 					<div class="tab_title">
-						<img th:src="@{/css/shop/images/}+${g.infoFname}" width="800px" height="100%" />
+						<img th:src="@{/images/shop/}+${g.infoFname}" width="800px" height="100%" />
 					</div>
 				</div>
 
