--- a/src/main/resources/templates/shop/cart.html
+++ b/src/main/resources/templates/shop/cart.html
@@ -50,7 +50,7 @@
 							</div>
 						</div>
 					</td>
-					<td style="text-align: left;"> <img src="/css/shop/images/susemi1.jpeg"
+					<td style="text-align: left;"> <img src="/images/shop/susemi1.jpeg"
 							style="width : 50px; height: 50px;" /> [소락] 천연 수세미 세트
 					</td>
 					<td>
@@ -78,7 +78,7 @@
 							</div>
 						</div>
 					</td>
-					<td style="text-align: left;"> <img src="/css/shop/images/susemi1.jpeg"
+					<td style="text-align: left;"> <img src="/images/shop/susemi1.jpeg"
 							style="width : 50px; height: 50px;" /> [소락] 천연 수세미 세트
 					</td>
 					<td>
